// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`http mocker request is valid HttpOperation contains example return lowest 2xx response and the first example matching the media type 1`] = `
Object {
  "body": "<todo><name>Shopping</name><completed>false</completed></todo>",
  "headers": Object {
    "Content-type": "application/xml",
    "x-todos-publish": Any<String>,
  },
  "statusCode": 200,
}
`;

exports[`http mocker request is valid given enforced example key and mediaType should return 200 response 1`] = `
Object {
  "body": "{ \\"root\\": \\"second\\" }",
  "headers": Object {
    "Content-type": "application/xml",
  },
  "statusCode": 200,
}
`;

exports[`http mocker request is valid given enforced example key should return application/json, 200 response 1`] = `
Object {
  "body": Array [
    Object {
      "completed": false,
      "id": 2,
      "name": "make bears",
    },
  ],
  "headers": Object {
    "Content-type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`http mocker request is valid given enforced status code and contentType and exampleKey should return the matching example 1`] = `
Object {
  "body": "<root>second</root>",
  "headers": Object {
    "Content-type": "application/xml",
  },
  "statusCode": 201,
}
`;

exports[`http mocker request is valid given enforced status code and contentType should return the first matching example 1`] = `
Object {
  "body": "<root>first</root>",
  "headers": Object {
    "Content-type": "application/xml",
  },
  "statusCode": 201,
}
`;

exports[`http mocker request is valid given enforced status code and example key should return application/json example 1`] = `
Object {
  "body": "{ \\"root\\": \\"second\\" }",
  "headers": Object {
    "Content-type": "application/json",
  },
  "statusCode": 201,
}
`;

exports[`http mocker request is valid given enforced status code should return the first matching example of application/json 1`] = `
Object {
  "body": "{ \\"root\\": \\"first\\" }",
  "headers": Object {
    "Content-type": "application/json",
  },
  "statusCode": 201,
}
`;

exports[`http mocker request is valid given only enforced content type and that content type exists should first 200 static example 1`] = `
Object {
  "body": "some text",
  "headers": Object {
    "Content-type": "text/plain",
  },
  "statusCode": 200,
}
`;
